crates/wbraster/dev/baselines/jpeg2000_step5r_ll_block_after_sp_mr_scan_order_fix_2026-04-20_rgb8x8.txt
warning: fields `encoded_codestream` and `uses_openjph_htj2k` are never read
   --> crates/wbjpeg2000/src/lib.rs:151:16
    |
147 | pub struct Image<'a> {
    |            ----- fields in this struct
...
151 |     pub(crate) encoded_codestream: &'a [u8],
    |                ^^^^^^^^^^^^^^^^^^
...
160 |     pub(crate) uses_openjph_htj2k: bool,
    |                ^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `copy_raw_bitmap_to_u8` is never used
   --> crates/wbjpeg2000/src/lib.rs:379:4
    |
379 | fn copy_raw_bitmap_to_u8(raw: &RawBitmap, buf: &mut [u8]) {
    |    ^^^^^^^^^^^^^^^^^^^^^

warning: `wbjpeg2000` (lib) generated 2 warnings
warning: unused import: `wbraster::error::RasterError`
    --> crates/wbraster/tests/integration.rs:2069:9
     |
2069 |     use wbraster::error::RasterError;
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `wbraster` (test "integration") generated 1 warning (run `cargo fix --test "integration" -p wbraster` to apply 1 suggestion)
    Finished `test` profile [optimized + debuginfo] target(s) in 0.08s
     Running unittests src/lib.rs (/Users/johnlindsay/Documents/programming/Rust/whitebox_next_gen/target/debug/deps/wbraster-9ea1ef0c4ad085e8)

running 1 test
[decode_component] component=0 has_explicit_precincts=true num_layers=1 scod=0x01
[decode_component] -> taking decode_component_proper path
[packet_header_align] BEFORE: bit_pos=30 byte_pos=3 bit_offset=6
[packet_header_align] AFTER: byte_pos=4 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=613 byte_pos=76 bit_offset=5
[packet_header_align] AFTER: byte_pos=77 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=1126 byte_pos=140 bit_offset=6
[packet_header_align] AFTER: byte_pos=141 (segs.len=1)
[ll_block_ab] num_bp=15 dims=8x8 nnz std=64 no_sp=64 no_mr=64 no_cl=0 legacy=64
[ll_block_ab] first_nz std=Some((0, -32643)) no_sp=Some((0, -32643)) no_mr=Some((0, -16384)) no_cl=None legacy=Some((0, -8236))
[ll_block_ab] head std=[-32643, -32643, -32643, -32643, -32642, -32642, -32642, -32642] no_sp=[-32643, -32643, -32643, -32643, -32642, -32642, -32642, -32642] no_mr=[-16384, -16384, -16384, -16384, -16384, -16384, -16384, -16384] no_cl=[0, 0, 0, 0, 0, 0, 0, 0] legacy=[-8236, -16486, 9586, -8758, -4852, -16742, -4708, -18676]
[decode_component] component=1 has_explicit_precincts=true num_layers=1 scod=0x01
[decode_component] -> taking decode_component_proper path
[packet_header_align] BEFORE: bit_pos=30 byte_pos=3 bit_offset=6
[packet_header_align] AFTER: byte_pos=4 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=613 byte_pos=76 bit_offset=5
[packet_header_align] AFTER: byte_pos=77 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=1126 byte_pos=140 bit_offset=6
[packet_header_align] AFTER: byte_pos=141 (segs.len=1)
[ll_block_ab] num_bp=8 dims=8x8 nnz std=64 no_sp=64 no_mr=64 no_cl=0 legacy=62
[ll_block_ab] first_nz std=Some((0, -200)) no_sp=Some((0, -200)) no_mr=Some((0, -128)) no_cl=None legacy=Some((1, -128))
[ll_block_ab] head std=[-200, -199, -198, -197, -196, -195, -194, -193] no_sp=[-200, -199, -198, -197, -196, -195, -194, -193] no_mr=[-128, -128, -128, -128, -128, -128, -128, -128] no_cl=[0, 0, 0, 0, 0, 0, 0, 0] legacy=[0, -128, 32, 16, 34, -130, -64, -128]
[decode_component] component=2 has_explicit_precincts=true num_layers=1 scod=0x01
[decode_component] -> taking decode_component_proper path
[packet_header_align] BEFORE: bit_pos=30 byte_pos=3 bit_offset=6
[packet_header_align] AFTER: byte_pos=4 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=613 byte_pos=76 bit_offset=5
[packet_header_align] AFTER: byte_pos=77 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=1126 byte_pos=140 bit_offset=6
[packet_header_align] AFTER: byte_pos=141 (segs.len=1)
[ll_block_ab] num_bp=7 dims=8x8 nnz std=64 no_sp=64 no_mr=64 no_cl=0 legacy=62
[ll_block_ab] first_nz std=Some((0, -100)) no_sp=Some((0, -100)) no_mr=Some((0, -64)) no_cl=None legacy=Some((0, -61))
[ll_block_ab] head std=[-100, -100, -100, -100, -100, -100, -100, -100] no_sp=[-100, -100, -100, -100, -100, -100, -100, -100] no_mr=[-64, -64, -64, -64, -64, -64, -64, -64] no_cl=[0, 0, 0, 0, 0, 0, 0, 0] legacy=[-61, -90, -57, -29, -50, -120, -39, -76]
[bridge] Image dimensions: 8x8
[bridge] Color space: RGB
[bridge] Original bit depth: 16
[wbjpeg2000_ll_block] resolution=0 num_bitplanes=17 rect=8x8 head=[-32643, -32643, -32643, -32643, -32642, -32642, -32642, -32642]
[wbjpeg2000_ll_block] resolution=0 num_bitplanes=17 rect=8x8 head=[-200, -199, -198, -197, -196, -195, -194, -193]
[wbjpeg2000_ll_block] resolution=0 num_bitplanes=17 rect=8x8 head=[-100, -100, -100, -100, -100, -100, -100, -100]
[bridge] Raw dimensions: 8x8
[bridge] Raw bytes_per_sample: 2
[bridge] Raw num_components: 3
[bridge] Raw bit_depth: 16
[bridge] Raw data length: 384
[bridge] 16-bit path: first 10 pixels (component 0): [100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0]
[bridge] 16-bit path: first 10 pixels after correction: [100, 100, 100, 100, 100, 100, 100, 100, 100, 100]
JPEG2000 differential summary: fixtures_total=1 multicomponent_fixtures=1 ok=0 native_error=0 native_unsupported_packet_header_markers=0 native_unsupported_poc=0 bridge_error=0 metadata_mismatch=0 sample_count_mismatch=0 sample_value_mismatch=1 multicomponent_native_error=0 multicomponent_bridge_error=0 multicomponent_metadata_mismatch=0 multicomponent_sample_count_mismatch=0 multicomponent_sample_value_mismatch=1
SAMPLE_VALUE_MISMATCH|tests/fixtures/rgb_8x8_lossless.jp2|idx=0 band=0 row=0 col=0 pixel=0 native=125 bridge=100 abs_err=25 eps=0
test formats::jpeg2000::differential_tests::jpeg2000_native_vs_bridge_differential_corpus ... ok

test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 282 filtered out; finished in 0.00s

     Running tests/integration.rs (/Users/johnlindsay/Documents/programming/Rust/whitebox_next_gen/target/debug/deps/integration-5f935e281ff4dbda)

running 0 tests

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 80 filtered out; finished in 0.00s

     Running tests/reprojection_parity.rs (/Users/johnlindsay/Documents/programming/Rust/whitebox_next_gen/target/debug/deps/reprojection_parity-623e1739416b87bb)

running 0 tests

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 2 filtered out; finished in 0.00s

